# thaillm-example

./: LICENSE  README.md  ref.md
dart/: README.md  pubspec.yaml
dart/example/: main.dart
dart/lib/: thaillm.dart
dart/lib/src/: chat_message.dart  chat_messages.dart  chat_response.dart  client.dart  exceptions.dart  model.dart  models.dart
dart/test/: thaillm_test.dart
litellm/: README.md  litellm_config.yaml  requirements.txt  typhoon_proxy.py
litellm_proxy/: .env  .env.example  README.md  config.yaml
python_proxy/: README.md  requirements.txt  typhoon_proxy.py
rust/: Cargo.toml  README.md  ref.md
rust/src/: main.rs  thaillm.rs  weather_tool.rs
rust/workspace/: fables-th.md  fables.md  mock.md  report.md
rust_openai/: Cargo.toml
rust_openai/src/: filesystem_tool.rs  main.rs  weather_tool.rs
rust_openai/workspace/: thaillm.md  weather.txt
telegram_bot/: .env.example  .gitignore  Cargo.toml  README.md  README_MCP.md  mcp.json.example  sessions.db
telegram_bot/.skills/create-skill/: SKILL.md
telegram_bot/.skills/greeting/: SKILL.md
telegram_bot/.skills/joke-generator/: SKILL.md
telegram_bot/.skills/system-info/: SKILL.md
telegram_bot/src/: bot.rs  cli.rs  main.rs  runner.rs  serve.rs
telegram_bot/src/agent/: database.rs  mcp.rs  mod.rs  utils.rs
telegram_bot/src/agent/filesystem_tool/: mod.rs
telegram_bot/src/agent/km_tool/: mod.rs
telegram_bot/src/agent/knowledge_tool/: mod.rs
telegram_bot/src/agent/memory_tool/: mod.rs
telegram_bot/src/agent/shell_tool/: mod.rs
telegram_bot/src/agent/system_info_tool/: mod.rs
telegram_bot/src/agent/weather_tool/: mod.rs
telegram_bot/src/agent/web_fetch_tool/: mod.rs
telegrame_bot/: .env.example  Cargo.toml  README.md
telegrame_bot/src/: agent.rs  bot.rs  cli.rs  filesystem_tool.rs  main.rs
telegrame_bot/src/agent/datetime_tool/: mod.rs
telegrame_bot/src/agent/filesystem_tool/: mod.rs
telegrame_bot/workspace/: Bangkok.txt
