[package]
name = "rust_openai"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rust = "0.6.0"
adk-tool = "0.6.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
async-trait = "0.1"
arc-swap = "1.7"
futures = "0.3"
urlencoding = "2"
async-stream = "0.3"
