[package]
name = "telegrame_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rust = "0.7.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1"

reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

teloxide = { version = "0.17.0", features = ["macros"] }
adk-session = "0.7.0"
adk-tool = "0.7.0"
adk-runner = "0.7.0"
urlencoding = "2.1.3"
pretty_env_logger = "0.5.0"
futures = "0.3.32"

dirs = "5"
clap = { version = "4.6.1", features = ["derive"] }
async-trait = "0.1.89"
